# geo-register-plugin

./: README.md  pyproject.toml
geo/: exif_reader.py  geoid.py  las_exporter.py  metashape_parser.py  tiles_exporter.py
geo/data/: README.md
panels/: main_panel.py
