[project]
name = "geo_register_pluggin"
version = "0.1.0"
description = "Add geo-reference (similarity transform local → ECEF) to a dataset"
authors = [{name = "LichtFeld User"}]
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.26",
    "laspy[lazrs]>=2.0",
]

[tool.lichtfeld]
auto_start = true
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.4.2"
required_features = []
